# e20-4yp-onchip-offline-neuromorphic-computing

./: .gitignore  BLOCK_DIAGRAM.md  CUSTOM_BACKPROP_ARCHITECTURE.md  IMPORTANT_COMMANDS.md  PROJECT_STATUS.md  QUICK_START.md  README.md  SMEM_EXPANSION_CHANGES.md  STATE2_TEST_GUIDE.md  SUMMARY_OF_CHANGES.md  TESTING.md  TESTING_GUIDE.md  VERIFICATION_GUIDE.md  chatsummary.md  firmware.hex  package-lock.json  quick_test_setup.sh  quick_test_soc.ps1  run_tests.sh  snn_soc.py
.github/: copilot-instructions.md
RISC_V/: README.md
code/: inference_test.s
custom_rv32im/: __init__.py  core.py
docs/: README.md
extention/: backprop_sim  backprop_sim.vcd  customUnit.v
firmware/: hello.S  hello.elf  linker.ld
models/: run_smnist_pipeline.sh
models/model_compiler/: pyproject.toml
models/model_compiler/neuron_mapper/: __init__.py  core.py  utils.py
shared_memory/: snn_shared_memory_tb.v  snn_shared_memory_tb.vvp  snn_shared_memory_wb.v
soc/: README.md
soc-config/: README.md
surrogate_lut/: gen_lut.py  gen_lut_for_test.py  state2_integration_tb.gtkw  state2_integration_tb.v  state2_integration_tb.vvp  surrogate_lut.hex  surrogate_lut_wb.v  surrogate_lut_wb_tb.v  surrogate_lut_wb_tb.vvp
tools/: analyze_weight_clamp_saturation.py  benchmark_chart.py  best_weights_epoch_1.txt  calc_blame_from_inference_log.py  check_vmem_lut_index_parity.py  check_weight_conversion_scale.py  compare_hw_sw_dumps.py  convert_smem_for_backprop.py  error_calculation.py  export_weights_for_hardware.py  generate_spike_input.py  generate_xor_test.py  learn_update_weights_custom_unit.py  (+12 more)
(+363 files in other folders)
