[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuron_mapper"
version = "0.1.0"
description = "The official model compiler for neuromophic processor"
authors = [{ name = "Kavishka Rambukwella", email = "kavishkarambukwella@gmail.com" }]
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["."]
include = ["neuron_mapper*"]
